Fixing code quality issues